--- a/index.html
+++ b/index.html
@@ -93,18 +93,18 @@
                 <li><a href="categoria.html?nombre=Termotanques&subcategoria=Dual">Dual</a></li>
             </ul>
         </li><li class="has-submenu">
-            <a href="categoria.html?nombre=Pequeños Electrodomésticos">Pequeños</a>
+            <a href="categoria.html?nombre=Pequeños">Pequeños</a>
             <ul class="submenu">
-                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Batidoras">Batidoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Licuadoras">Licuadoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Multiprocesadoras">Multiprocesadoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Mixers">Mixers</a></li>
-                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=pavas eléctricas">Pavas Eléctricas</a></li>
-                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Cafeteras">Cafeteras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Tostadoras">Tostadoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Sandwicheras">Sandwicheras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subCategoria=Exprimidores y jugueras">Exprimidores y Jugueras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Picadoras">Picadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=batidoras">batidoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Licuadoras">Licuadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Multiprocesadoras">Multiprocesadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Mixers">Mixers</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=pavas electricas">pavas electricas</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Cafeteras">Cafeteras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Tostadoras">Tostadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Sandwicheras">Sandwicheras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subCategoria=Exprimidores y jugueras">Exprimidores y Jugueras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Picadoras">Picadoras</a></li>
             </ul>
         </li>
         <li class="has-submenu">
@@ -222,8 +222,8 @@
                         </a>
                     </div>
                     <div class="home-categories-item">
-                        <a href="categoria.html?nombre=Pequeños Electrodomésticos">
-                            <img class="home-categories-img" src="images/owl_carrusel/Pava_Electrica_Philips_HD9368_90_Negra_Temp_Para_Mate_17L_2200w_3-removebg-preview.png" alt="Pequeños Electrodomésticos">
+                        <a href="categoria.html?nombre=Pequeños">
+                            <img class="home-categories-img" src="images/owl_carrusel/Pava_Electrica_Philips_HD9368_90_Negra_Temp_Para_Mate_17L_2200w_3-removebg-preview.png" alt="Pequeños">
                             <div class="home-categories-name">Pequeños Electro</div>
                         </a>
                     </div>
