--- a/presupuesto.html
+++ b/presupuesto.html
@@ -19,18 +19,7 @@
                         <img src="images/logo_trans.png" alt="Center Hogar Quilmes" class="logo-img">
                     </a>
                 </div>
-                <div class="header-actions">
-                    <div class="user-options">
-                        <a href="presupuesto.html" class="user-link" title="Pedir presupuesto" aria-label="Pedir presupuesto">
-                            <span class="icon">📝</span>
-                            <span class="label">Pedir presupuesto</span>
-                        </a>
-                        <a href="contacto.html" class="cart-link" title="Contacto" aria-label="Contacto">
-                            <span class="icon">📱</span>
-                            <span class="label">Contacto</span>
-                        </a>
-                    </div>
-                    <div class="header-actions">
+                <<div class="header-actions">
     <button class="menu-toggle" aria-label="Abrir menú de navegación">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <line x1="3" y1="12" x2="21" y2="12"></line>
@@ -39,7 +28,6 @@
         </svg>
     </button>
 </div>
-                </div>
             </div>
             <div class="search-bar">
                 <div class="search-bar-input-container">
@@ -102,18 +90,18 @@
                 <li><a href="categoria.html?nombre=Termotanques&subcategoria=Dual">Dual</a></li>
             </ul>
         </li><li class="has-submenu">
-            <a href="categoria.html?nombre=Pequeños electrodomesticos">Pequeños</a>
+            <a href="categoria.html?nombre=Pequeños">Pequeños</a>
             <ul class="submenu">
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Batidoras">Batidoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Licuadoras">Licuadoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Multiprocesadoras">Multiprocesadoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Mixers">Mixers</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Pavas electricas">Pavas Eléctricas</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Cafeteras">Cafeteras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Tostadoras">Tostadoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Sandwicheras">Sandwicheras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subCategoria=Exprimidores y jugueras">Exprimidores y Jugueras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Picadoras">Picadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=batidoras">batidoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Licuadoras">Licuadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Multiprocesadoras">Multiprocesadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Mixers">Mixers</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=pavas electricas">pavas electricas</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Cafeteras">Cafeteras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Tostadoras">Tostadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Sandwicheras">Sandwicheras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subCategoria=Exprimidores y jugueras">Exprimidores y Jugueras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Picadoras">Picadoras</a></li>
             </ul>
         </li>
         <li class="has-submenu">
@@ -172,15 +160,15 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="container">
-            <p>© 2025 Center Hogar Quilmes. Todos los derechos reservados.</p>
-            <ul>
-                <li><a href="terminos.html">Términos y condiciones</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="privacidad.html">Privacidad</a></li>
-                <li><a href="garantia.html">Políticas de garantías</a></li>
-            </ul>
-        </div>
+    <div class="container">
+        <p>© 2025 Center Hogar Quilmes. Todos los derechos reservados.</p>
+        <ul>
+            <li><a href="terminos.html">Términos y condiciones</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="privacidad.html">Privacidad</a></li>
+            <li><a href="garantia.html">Políticas de garantías</a></li>
+        </ul>
+    </div>
     </footer>
 
     <!-- Botón flotante para volver arriba -->
