--- a/terminos.html
+++ b/terminos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Lee los Términos y Condiciones de Center Hogar Quilmes para conocer las reglas de uso de nuestro sitio y servicios.">
-    <meta name="keywords" content="términos y condiciones, Center Hogar Quilmes, electrodomésticos">
+    <meta name="keywords" content="términos y condiciones, Center Hogar Quilmes, Electrodomesticos">
     <title>Términos y Condiciones - Center Hogar Quilmes</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -92,18 +92,18 @@
                 <li><a href="categoria.html?nombre=Termotanques&subcategoria=Dual">Dual</a></li>
             </ul>
         </li><li class="has-submenu">
-            <a href="categoria.html?nombre=Pequeños electrodomesticos">Pequeños</a>
+            <a href="categoria.html?nombre=Pequeños">Pequeños</a>
             <ul class="submenu">
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Batidoras">Batidoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Licuadoras">Licuadoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Multiprocesadoras">Multiprocesadoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Mixers">Mixers</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Pavas electricas">Pavas Eléctricas</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Cafeteras">Cafeteras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Tostadoras">Tostadoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Sandwicheras">Sandwicheras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subCategoria=Exprimidores y jugueras">Exprimidores y Jugueras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Picadoras">Picadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=batidoras">batidoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Licuadoras">Licuadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Multiprocesadoras">Multiprocesadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Mixers">Mixers</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=pavas electricas">pavas electricas</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Cafeteras">Cafeteras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Tostadoras">Tostadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Sandwicheras">Sandwicheras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subCategoria=Exprimidores y jugueras">Exprimidores y Jugueras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Picadoras">Picadoras</a></li>
             </ul>
         </li>
         <li class="has-submenu">
@@ -127,7 +127,7 @@
             <p>Bienvenido al sitio web de Center Hogar Quilmes. Al utilizar nuestro sitio, aceptas cumplir con los siguientes términos y condiciones. Te recomendamos leerlos cuidadosamente.</p>
             
             <h3>1. Uso del Sitio</h3>
-            <p>Este sitio web es un catálogo virtual de productos de Center Hogar Quilmes. Su propósito es mostrar información sobre electrodomésticos disponibles en nuestro local. No ofrecemos compras directas en línea; los usuarios pueden solicitar presupuestos a través de WhatsApp o contactarnos por otros medios.</p>
+            <p>Este sitio web es un catálogo virtual de productos de Center Hogar Quilmes. Su propósito es mostrar información sobre Electrodomesticos disponibles en nuestro local. No ofrecemos compras directas en línea; los usuarios pueden solicitar presupuestos a través de WhatsApp o contactarnos por otros medios.</p>
             
             <h3>2. Propiedad Intelectual</h3>
             <p>Todos los contenidos del sitio (imágenes, textos, logotipos) son propiedad de Center Hogar Quilmes o de sus respectivos dueños. Queda prohibida su reproducción sin autorización.</p>
@@ -151,15 +151,15 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="container">
-            <p>© 2025 Center Hogar Quilmes. Todos los derechos reservados.</p>
-            <ul>
-                <li><a href="terminos.html">Términos y condiciones</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="privacidad.html">Privacidad</a></li>
-                <li><a href="garantia.html">Políticas de garantías</a></li>
-            </ul>
-        </div>
+    <div class="container">
+        <p>© 2025 Center Hogar Quilmes. Todos los derechos reservados.</p>
+        <ul>
+            <li><a href="terminos.html">Términos y condiciones</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="privacidad.html">Privacidad</a></li>
+            <li><a href="garantia.html">Políticas de garantías</a></li>
+        </ul>
+    </div>
     </footer>
 
     <!-- Botón flotante para volver arriba -->
