--- a/admin.html
+++ b/admin.html
@@ -276,13 +276,13 @@ const categoryFields = {
         }
     },
     "Pequeños": {
-        subcategorias: ["batidoras", "Licuadoras", "Multiprocesadoras", "Mixers", "pavas electricas", "Cafeteras", "Tostadoras", "Sandwicheras", "Exprimidores y Jugueras", "Picadoras"],
+        subcategorias: ["Batidoras", "Licuadoras", "Multiprocesadoras", "Mixers", "Pavas eléctricas", "Cafeteras", "Tostadoras", "Sandwicheras", "Exprimidores y Jugueras", "Picadoras"],
         folders: {
-            "batidoras": "batidoras",
+            "Batidoras": "Batidoras",
             "Licuadoras": "licuadoras",
             "Multiprocesadoras": "multiprocesadoras",
             "Mixers": "mixers",
-            "pavas electricas": "pavas_electricas",
+            "Pavas eléctricas": "pavas_electricas",
             "Cafeteras": "cafeteras",
             "Tostadoras": "tostadoras",
             "Sandwicheras": "sandwicheras",
@@ -290,7 +290,7 @@ const categoryFields = {
             "Picadoras": "picadoras"
         },
         fields: {
-            "batidoras": [
+            "Batidoras": [
                 { label: "Potencia (W)", name: "potencia", type: "text", placeholder: "500" },
                 { label: "Velocidades", name: "velocidades", type: "text", placeholder: "5" },
                 { label: "Capacidad (Litros)", name: "capacidad", type: "text", placeholder: "1.5" },
@@ -317,7 +317,7 @@ const categoryFields = {
                 { label: "Velocidades", name: "velocidades", type: "text", placeholder: "3" },
                 { label: "Accesorios incluidos", name: "accesorios", type: "text", placeholder: "Batidor, picador" }
             ],
-            "pavas electricas": [
+            "Pavas eléctricas": [
                 { label: "Capacidad (Litros)", name: "capacidad", type: "text", placeholder: "1.7" },
                 { label: "Potencia (W)", name: "potencia", type: "text", placeholder: "2000" },
                 { label: "Apagado automático", name: "apagado_auto", type: "select", options: ["Sí", "No"] },
