--- a/categoria.html
+++ b/categoria.html
@@ -92,11 +92,11 @@
         </li><li class="has-submenu">
             <a href="categoria.html?nombre=Pequeños">Pequeños</a>
             <ul class="submenu">
-                <li><a href="categoria.html?nombre=Pequeños&subcategoria=batidoras">Batidoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Batidoras">Batidoras</a></li>
                 <li><a href="categoria.html?nombre=Pequeños&subcategoria=licuadoras">Licuadoras</a></li>
                 <li><a href="categoria.html?nombre=Pequeños&subcategoria=multiprocesadoras">Multiprocesadoras</a></li>
                 <li><a href="categoria.html?nombre=Pequeños&subcategoria=mixers">Mixers</a></li>
-                <li><a href="categoria.html?nombre=Pequeños&subcategoria=pavas electricas">Pavas eléctricas</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Pavas eléctricas">Pavas eléctricas</a></li>
                 <li><a href="categoria.html?nombre=Pequeños&subcategoria=cafeteras">Cafeteras</a></li>
                 <li><a href="categoria.html?nombre=Pequeños&subcategoria=tostadoras">Tostadoras</a></li>
                 <li><a href="categoria.html?nombre=Pequeños&subcategoria=sandwicheras">Sandwicheras</a></li>
