--- a/presupuesto.html
+++ b/presupuesto.html
@@ -92,11 +92,11 @@
         </li><li class="has-submenu">
             <a href="categoria.html?nombre=Pequeños">Pequeños</a>
             <ul class="submenu">
-                <li><a href="categoria.html?nombre=Pequeños&subcategoria=batidoras">batidoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Batidoras">Batidoras</a></li>
                 <li><a href="categoria.html?nombre=Pequeños&subcategoria=Licuadoras">Licuadoras</a></li>
                 <li><a href="categoria.html?nombre=Pequeños&subcategoria=Multiprocesadoras">Multiprocesadoras</a></li>
                 <li><a href="categoria.html?nombre=Pequeños&subcategoria=Mixers">Mixers</a></li>
-                <li><a href="categoria.html?nombre=Pequeños&subcategoria=pavas electricas">pavas electricas</a></li>
+                <li><a href="categoria.html?nombre=Pequeños&subcategoria=Pavas eléctricas">Pavas eléctricas</a></li>
                 <li><a href="categoria.html?nombre=Pequeños&subcategoria=Cafeteras">Cafeteras</a></li>
                 <li><a href="categoria.html?nombre=Pequeños&subcategoria=Tostadoras">Tostadoras</a></li>
                 <li><a href="categoria.html?nombre=Pequeños&subcategoria=Sandwicheras">Sandwicheras</a></li>
