--- a/producto.html
+++ b/producto.html
@@ -29,8 +29,28 @@
             <line x1="3" y1="18" x2="21" y2="18"></line>
         </svg>
     </button>
-</div>
-            </div>
+    <div class="header-contact">
+                    <div class="contact-item">
+                        <p><a href="https://api.whatsapp.com/send?phone=5491131680489&text=Hola,%20tengo%20una%20consulta" target="_blank">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="contact-icon">
+                                <path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path>
+                            </svg>
+                            +54 911 3168-0489
+                        </a></p>
+                    </div>
+                    <div class="contact-item">
+        <p><a href="https://maps.app.goo.gl/MGt4KohJ75XAGDWn8" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="contact-icon">
+                <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
+                <circle cx="12" cy="10" r="3"></circle>
+            </svg>
+            Rivadavia 220, Quilmes
+        </a></p>
+    </div>
+                </div>
+        </div>
+    </div>
+    
             <div class="search-bar">
                 <div class="search-bar-input-container">
                     <input type="text" placeholder="Buscar productos..." id="searchInput" autocomplete="off">
@@ -68,7 +88,7 @@
             </ul>
         </li>
         <li class="has-submenu">
-            <a href="categoria.html?nombre=Hornos, microondas y freidoras">Hornos, microondas y freidoras</a>
+            <a href="categoria.html?nombre=Hornos, microondas y freidoras">Hornos, Microondas<br>y freidoras</a>
             <ul class="submenu">
                 <li><a href="categoria.html?nombre=Hornos, microondas y freidoras&subcategoria=Hornos">Hornos</a></li>
                 <li><a href="categoria.html?nombre=Hornos, microondas y freidoras&subcategoria=Microondas">Microondas</a></li>
@@ -85,14 +105,15 @@
             </ul>
         </li>
         <li class="has-submenu">
-            <a href="categoria.html?nombre=Termotanques">Termotanques</a>
+            <a href="categoria.html?nombre=Termotanques">Termotanques<br>y calefones</a>
             <ul class="submenu">
                 <li><a href="categoria.html?nombre=Termotanques&subcategoria=Gas">Gas</a></li>
                 <li><a href="categoria.html?nombre=Termotanques&subcategoria=Eléctrico">Eléctrico</a></li>
                 <li><a href="categoria.html?nombre=Termotanques&subcategoria=Dual">Dual</a></li>
+                <li><a href="categoria.html?nombre=Termotanques&subcategoria=Calefones">Calefones</a></li>
             </ul>
         </li><li class="has-submenu">
-            <a href="categoria.html?nombre=Pequeños">Pequeños</a>
+            <a href="categoria.html?nombre=Pequeños">Pequeños<br>electrodomésticos</a>
             <ul class="submenu">
                 <li><a href="categoria.html?nombre=Pequeños&subcategoria=batidoras">batidoras</a></li>
                 <li><a href="categoria.html?nombre=Pequeños&subcategoria=Licuadoras">Licuadoras</a></li>
