--- a/producto.html
+++ b/producto.html
@@ -12,7 +12,6 @@
 </head>
 <body>
     <!-- Header -->
-    <body class="product-page">
     <header class="header">
         <div class="container">
             <div class="header-content">
@@ -76,7 +75,9 @@
             <a href="categoria.html?nombre=Tecnologia">Tecnología</a>
             <ul class="submenu">
                 <li><a href="categoria.html?nombre=Tecnologia&subcategoria=Celulares">Celulares</a></li>
+                <li><a href="categoria.html?nombre=Tecnologia&subcategoria=Tablets">Tablets</a></li>
                 <li><a href="categoria.html?nombre=Tecnologia&subcategoria=Notebooks">Notebooks</a></li>
+                <li><a href="categoria.html?nombre=Tecnologia&subcategoria=Impresoras">Impresoras</a></li>
             </ul>
         </li>
         <li class="has-submenu">
@@ -237,10 +238,10 @@
 
     // Calcular precios en cuotas
     const cuotas = precioLista ? [
-        { cuotas: 3, texto: '3 Cuotas sin interés', precio: precioLista / 3 },
-        { cuotas: 6, texto: '6 Cuotas sin interés', precio: precioLista / 6 },
-        { cuotas: 9, texto: '9 Cuotas sin interés', precio: precioLista / 9 },
-        { cuotas: 12, texto: '12 Cuotas fijas', precio: (precioLista * 1.05) / 12 }
+        { cuotas: 3, texto: '3 Cuotas sin interés', precio: (precioLista * 0.94) / 3}, // Descuento del 6%
+        { cuotas: 6, texto: '6 Cuotas sin interés', precio:  (precioLista * 0.98) / 6 }, // Descuento del 2%
+        { cuotas: 9, texto: '9 Cuotas sin interés', precio: (precioLista * 1.03) / 9 },// Interés del 3%
+        { cuotas: 12, texto: '12 Cuotas fijas', precio: (precioLista * 1.07) / 12 }// Interés del 7%
     ] : [];
 
     document.getElementById('product-name').textContent = producto ? producto.nombre : 'Producto no encontrado';
