--- a/categoria.html
+++ b/categoria.html
@@ -74,7 +74,9 @@
             <a href="categoria.html?nombre=Tecnologia">Tecnología</a>
             <ul class="submenu">
                 <li><a href="categoria.html?nombre=Tecnologia&subcategoria=Celulares">Celulares</a></li>
+                <li><a href="categoria.html?nombre=Tecnologia&subcategoria=Tablets">Tablets</a></li>
                 <li><a href="categoria.html?nombre=Tecnologia&subcategoria=Notebooks">Notebooks</a></li>
+                <li><a href="categoria.html?nombre=Tecnologia&subcategoria=Impresoras">Impresoras</a></li>
             </ul>
         </li>
         <li class="has-submenu">
@@ -254,7 +256,13 @@ const atributosPorCategoria = {
         "Cámara trasera",
         "Cámara frontal",
         "Red móvil",
-        "RAM (GB)"
+        "RAM (GB)",
+        "Tipo de tinta",
+        "WIFI",
+        "Scanner",
+        "Fotocopias",
+        "Tipo de impresión"
+
     ],
     "climatizacion": [
         "Potencia (W)",
