--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
             <a href="categoria.html?nombre=Tecnologia">Tecnología</a>
             <ul class="submenu">
                 <li><a href="categoria.html?nombre=Tecnologia&subcategoria=Celulares">Celulares</a></li>
+                <li><a href="categoria.html?nombre=Tecnologia&subcategoria=Tablets">Tablets</a></li>
                 <li><a href="categoria.html?nombre=Tecnologia&subcategoria=Notebooks">Notebooks</a></li>
+                <li><a href="categoria.html?nombre=Tecnologia&subcategoria=Impresoras">Impresoras</a></li>
             </ul>
         </li>
         <li class="has-submenu">
@@ -204,7 +206,7 @@
                     <div class="home-categories-item">
                         <a href="categoria.html?nombre=Climatizacion&subcategoria=Aires+acondicionados">
                             <img class="home-categories-img" src="images/owl_carrusel/4173289_f-removebg-preview.png" alt="Aires acondicionados">
-                            <div class="home-categories-name">Aires acondicionados</div>
+                            <div class="home-categories-name">Aires acondicinados</div>
                         </a>
                     </div>
                     <div class="home-categories-item">
