--- a/privacidad.html
+++ b/privacidad.html
@@ -76,7 +76,9 @@
             <a href="categoria.html?nombre=Tecnologia">Tecnología</a>
             <ul class="submenu">
                 <li><a href="categoria.html?nombre=Tecnologia&subcategoria=Celulares">Celulares</a></li>
+                <li><a href="categoria.html?nombre=Tecnologia&subcategoria=Tablets">Tablets</a></li>
                 <li><a href="categoria.html?nombre=Tecnologia&subcategoria=Notebooks">Notebooks</a></li>
+                <li><a href="categoria.html?nombre=Tecnologia&subcategoria=Impresoras">Impresoras</a></li>
             </ul>
         </li>
         <li class="has-submenu">
