--- a/categoria.html
+++ b/categoria.html
@@ -257,11 +257,14 @@ const atributosPorCategoria = {
         "Cámara frontal",
         "Red móvil",
         "RAM (GB)",
+        "Almacenamiento (GB)",
         "Tipo de tinta",
         "WIFI",
         "Scanner",
         "Fotocopias",
-        "Tipo de impresión"
+        "Tipo de impresión",
+        "Procesador",
+        "Tamaño de pantalla (pulgadas)"
 
     ],
     "climatizacion": [
